--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html, body {
 	min-height: 100%;
-	line-height: 1.5;
+	line-height: 1.0;
 	font-weight: 1.5;
 	font-family: sans-serif;
 }
@@ -14,12 +14,48 @@ body {
 
 
 .header {
-	padding: 15px;
-	height: 30%;
+	height: 20%;
 	background-color: #e0e0d1;
+	display: flex;
+	flex-direction: column;
 }
 
+#topnav {
+	background-color:#f5f5f0;
+}
+
+#topnav ul {
+	font-size: 24px;
+	min-width: 500px;
+	list-style-type: none;
+	font-family: "Times New Roman", Times, serif;
+}
+
+#topnav li {
+	display: inline;
+	height: 10%;
+}
+
+#topnav a {
+	background:#f5f5f0;
+	text-decoration:none;
+	Width:18%;
+	float:left;
+	text-align: center;
+	border-right:1px solid #f5f5f0
+}
+
+#topnav a:link {color: black}
+
+#topnav a:visited {color: purple}
+
+#topnav a:hover {color: green;
+background:#FEDCBA}
+
+
+
 h1 {
-	
+	padding: 15px;
+	margin-left: 8%;
 }
 
