--- a/App Dev Project 3/main.css
+++ b/App Dev Project 3/main.css
@@ -28,7 +28,6 @@ body {
 }
 
 #topnav ul {
-	
 	font-size: 28px;
 	min-width: 500px;
 	list-style-type: none;
@@ -56,7 +55,7 @@ body {
 #topnav a:hover {color: green;
 background:#FEDCBA}
 
-h1 {
+#mainhead {
 	padding: 15px;
 	margin-left: 8%;
 	font-size: 35px;
@@ -67,15 +66,43 @@ h1 {
 	display: flex;
 }
 
-.slideshow {
+img {
  	margin-left: 100px;
   	margin-top: 10px;
-  	width: 35%;
+  	
   	height: 500px;
   	padding: 10px;
+	min-width: 35%;
 }
 
 .info {
-	flex-direction: row;
+	
 }
 
+.subhead {
+	background: #ffecb3;
+	width: 610px;
+}
+
+#subhead {
+	margin-left: 10px;
+	font-size: 35px;
+}
+
+p {
+	font-size: 26px;
+	margin-left: 10px;
+}
+
+#courselist {
+	font-size: 26px;
+	list-style-type: circle;
+	margin-left: 10px;
+	list-style-position: inside;
+	padding: 0;
+}
+
+#courselist li {
+	
+	margin-left: 0;
+}
