--- a/App Dev Project 3/main.css
+++ b/App Dev Project 3/main.css
@@ -11,6 +11,7 @@ body {
 	width: 70%;
 	margin-left: 15%;
 	margin-top: 0;
+	overflow: scroll;
 }
 
 
@@ -73,10 +74,6 @@ img {
   	height: 500px;
   	padding: 10px;
 	min-width: 35%;
-}
-
-.info {
-	
 }
 
 .subhead {
